--- a/.github/workflows/copy-files.yml
+++ b/.github/workflows/copy-files.yml
@@ -36,38 +36,65 @@ jobs:
           --parameters "commands=[
               \"#!/bin/bash\",
               \"cd /home/ubuntu\",
-              \"echo '=== Setting up OCR1_project directory ==='\",
-              \"if [ -d ~/OCR1_project ]; then echo 'Directory exists, removing old version...'; rm -rf ~/OCR1_project; fi\",
-              \"echo '=== Cloning latest code ==='\",
-              \"git clone https://github.com/${{ github.repository }} ~/OCR1_project\",
+              \"echo '=== Starting deployment ===' \",
+              \"# Check if repo exists, if not clone it first\",
+              \"if [ ! -d ~/OCR1_project ]; then\",
+              \"  echo 'Repository not found, cloning for first time...'\",
+              \"  git clone https://github.com/${{ github.repository }} ~/OCR1_project\",
+              \"else\",
+              \"  echo 'Repository exists, updating...'\",
+              \"fi\",
               \"cd ~/OCR1_project\",
-              \"git checkout ${{ github.sha }}\",
-              \"echo '=== Listing files after clone ==='\",
+              \"echo '=== Fetching latest changes ==='\",
+              \"git fetch origin\",
+              \"echo '=== Resetting to specific commit: ${{ github.sha }} ==='\",
+              \"git reset --hard ${{ github.sha }}\",
+              \"echo '=== Cleaning untracked files ==='\",
+              \"git clean -fd\",
+              \"echo '=== Current commit info ==='\",
+              \"git log -1 --oneline\",
+              \"echo '=== Listing project files ==='\",
               \"ls -la ~/OCR1_project\"
             ]" \
           --query 'Command.CommandId' \
           --output text)
-        
+      
         echo "Command ID: $COMMAND_ID"
-        
-        # Wait for completion (timeout after 60 seconds)
+      
+        # Wait for completion with error handling
         echo -e "Waiting for command to complete...\n"
+        set +e
         aws ssm wait command-executed \
           --command-id "$COMMAND_ID" \
           --instance-id ${{ secrets.EC2_INSTANCE_ID }} \
           --cli-read-timeout 60
-        
-        # Show the results
+        WAIT_EXIT_CODE=$?
+        set -e
+      
+        # Show results
         echo "=== COMMAND OUTPUT ==="
         aws ssm get-command-invocation \
           --command-id "$COMMAND_ID" \
           --instance-id ${{ secrets.EC2_INSTANCE_ID }} \
           --query 'StandardOutputContent' \
           --output text
-        
-        echo "=== COMMAND STATUS ==="
+      
+        echo "=== COMMAND ERRORS ==="
         aws ssm get-command-invocation \
           --command-id "$COMMAND_ID" \
           --instance-id ${{ secrets.EC2_INSTANCE_ID }} \
-          --query 'Status' \
+          --query 'StandardErrorContent' \
           --output text
+      
+        echo "=== COMMAND STATUS ==="
+        STATUS=$(aws ssm get-command-invocation \
+          --command-id "$COMMAND_ID" \
+          --instance-id ${{ secrets.EC2_INSTANCE_ID }} \
+          --query 'Status' \
+          --output text)
+        echo "Status: $STATUS"
+      
+        if [ "$STATUS" = "Failed" ]; then
+          echo "Deployment failed!"
+          exit 1
+        fi
