--- a/.github/workflows/copy-files.yml
+++ b/.github/workflows/copy-files.yml
@@ -38,13 +38,13 @@ jobs:
               \"cd /home/ubuntu\",
               \"echo '=== Starting deployment ===' \",
               \"# Check if repo exists, if not clone it first\",
-              \"if [ ! -d ~/OCR1_project ]; then\",
+              \"if [ ! -d /OCR1_project ]; then\",
               \"  echo 'Repository not found, cloning for first time...'\",
               \"  git clone https://github.com/${{ github.repository }} ~/OCR1_project\",
               \"else\",
               \"  echo 'Repository exists, updating...'\",
               \"fi\",
-              \"cd ~/OCR1_project\",
+              \"cd /OCR1_project\",
               \"echo '=== Fetching latest changes ==='\",
               \"git fetch origin\",
               \"echo '=== Resetting to specific commit: ${{ github.sha }} ==='\",
