--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
               "#!/bin/bash",
               "cd /home/ubuntu",
               "echo \"=== Starting deployment ===\"",
-              "cd ~/OCR1_project",
+              "cd /home/ubuntu/OCR1_project",
               "echo \"$DOCKER_PASSWORD\" | docker login -u \"$DOCKER_USERNAME\" --password-stdin",
               "docker pull jjp006/ocr1:${IMAGE_TAG}",
               "docker tag jjp006/ocr1:${IMAGE_TAG} jjp006/ocr1:latest",
