--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,8 @@ jobs:
           --comment "Deploy on EC2" \
           --parameters 'commands=[
               "#!/bin/bash",
-              "cd /home/ubuntu",
+              "cd /home/ubuntu || exit 1",
+              "git config --global --add safe.directory /home/ubuntu",
               "echo \"=== Starting deployment ===\"",
               "cd /home/ubuntu/OCR1_project",
               "echo \"$DOCKER_PASSWORD\" | docker login -u \"$DOCKER_USERNAME\" --password-stdin",
