--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,8 +38,9 @@ jobs:
           --comment "Deploy on EC2" \
           --parameters 'commands=[
               "#!/bin/bash",
-              "cd /home/ubuntu || exit 1",
-              "git config --global --add safe.directory /home/ubuntu",
+              "cd /home/ubuntu || cd /tmp || exit 1",
+              \"export HOME=/home/ubuntu \",
+              \"git config --global --add safe.directory /home/ubuntu/OCR1_project\",
               "echo \"=== Starting deployment ===\"",
               "cd /home/ubuntu/OCR1_project",
               "echo \"$DOCKER_PASSWORD\" | docker login -u \"$DOCKER_USERNAME\" --password-stdin",
