--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,10 +36,10 @@ jobs:
           --instance-ids ${{ secrets.EC2_INSTANCE_ID }} \
           --document-name "AWS-RunShellScript" \
           --comment "Deploy on EC2" \
-          --parameters 'commands=[
+          --parameters "commands=[
               "#!/bin/bash",
               "cd /home/ubuntu || cd /tmp || exit 1",
-              "export HOME=/home/ubuntu \",
+              "export HOME=/home/ubuntu ",
               "git config --global --add safe.directory /home/ubuntu/OCR1_project",
               "echo \"=== Starting deployment ===\"",
               "cd /home/ubuntu/OCR1_project",
@@ -54,7 +54,7 @@ jobs:
               "docker logs ocr_web",
               "curl -f http://localhost:8000 || echo \"App not ready yet\"",
               "sudo systemctl restart nginx"
-            ]' \
+            ]" \
         --query 'Command.CommandId' \
         --output text)
         
