update Dockerfile & deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,7 @@ jobs:
               \"docker-compose -f docker-compose.generated.yml up -d --build --force-recreate\",
               \"docker ps -a\",
               \"docker logs ocr_web\",
+              \"sudo ss -tulpn | grep -E ':8000|:80' \",
               \"curl -f http://localhost:8000 || echo 'App not ready yet'\",
               \"sudo systemctl restart nginx\",
             ]" \
