--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,21 +40,64 @@ jobs:
               \"#!/bin/bash\",
               \"cd /home/ubuntu || cd /tmp || exit 1\",
               \"export HOME=/home/ubuntu\",
+              
+              \"echo '=== Cleaning up disk space ==='\",
+              \"docker system prune -af --volumes\",
+              \"docker image prune -af\",
+              \"sudo apt-get autoremove -y\",
+              \"sudo apt-get autoclean\",
+              
+              \"echo '=== Setting up repository ==='\",
               \"git config --global --add safe.directory /home/ubuntu/OCR1_project\",
-              \"echo '=== Starting deployment ==='\",
               \"cd /home/ubuntu/OCR1_project\",
+              
+              \"echo '=== Setting file permissions ==='\",
+              \"sudo chown -R ubuntu:ubuntu /home/ubuntu/OCR1_project\",
+              \"chmod +x *.sh 2>/dev/null || true\",
+              \"chmod 644 docker-compose.yml\",
+              \"chmod 644 *.py 2>/dev/null || true\",
+              
+              \"echo '=== Docker login and pull ==='\",
               \"echo '$DOCKER_PASSWORD' | docker login -u '$DOCKER_USERNAME' --password-stdin\",
               \"docker pull jjp006/ocr1:${IMAGE_TAG}\",
               \"docker tag jjp006/ocr1:${IMAGE_TAG} jjp006/ocr1:latest\",
+              
+              \"echo '=== Stopping existing containers ==='\",
               \"export IMAGE_TAG=${IMAGE_TAG}\",
               \"envsubst < docker-compose.yml > docker-compose.generated.yml\",
-              \"docker-compose -f docker-compose.generated.yml down --remove-orphans\",
+              \"docker-compose -f docker-compose.generated.yml down --remove-orphans || true\",
+              
+              \"echo '=== Starting new containers ==='\",
               \"docker-compose -f docker-compose.generated.yml up -d --build --force-recreate\",
+              
+              \"echo '=== Waiting for application to start ==='\",
+              \"sleep 30\",
+              
+              \"echo '=== Checking container status ==='\",
               \"docker ps -a\",
-              \"docker logs ocr_web \",
-              \"sudo ss -tulpn | grep -E ':8000|:80' \",
-              \"curl -f http://localhost:8000 || echo 'App not ready yet'\",
+              \"docker logs ocr_web --tail 50\",
+              
+              \"echo '=== Checking ports ==='\",
+              \"sudo ss -tulpn | grep -E ':8000|:80'\",
+              
+              \"echo '=== Testing application ==='\",
+              \"for i in {1..5}; do\",
+              \"  if curl -f http://localhost:8000; then\",
+              \"    echo 'App is ready!'\",
+              \"    break\",
+              \"  else\",
+              \"    echo \\\"Attempt $i: App not ready, waiting 10 seconds...\\\"\",
+              \"    sleep 10\",
+              \"  fi\",
+              \"done\",
+              
+              \"echo '=== Restarting nginx ==='\",
               \"sudo systemctl restart nginx\",
+              \"sudo systemctl status nginx --no-pager -l\",
+              
+              \"echo '=== Final status check ==='\",
+              \"curl -I http://localhost || echo 'Nginx check failed'\",
+              \"df -h | head -5\"
             ]" \
         --query 'Command.CommandId' \
         --output text)
